--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* overflow-x: hidden !important; */
+  
+}
+
+html{
+  width: fit-content !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root{
+  --primary-blue: #002057;
+  --primary-orange: #ff561c;
 }
